# agent_draw

./: .env  .env.example  .gitignore  README.md  SKILL_HELP.md  er_test.py  examples.py  main.py  pyproject.toml  test.py  特色分类管理时序图.vsdx
.claude/: settings.local.json
data/于子尧/er/: 商品实体.vsdx  团购参与实体.vsdx  团购实体.vsdx  就业信息实体.vsdx  用户实体.vsdx  简历投递实体.vsdx  订单实体.vsdx  订单项实体.vsdx
data/于子尧/flowchart/: 商品管理模块流程图.vsdx  团购管理模块流程图.vsdx  就业信息管理模块流程图.vsdx  数据分析模块流程图.vsdx  用户管理模块流程图.vsdx  订单管理模块流程图.vsdx
data/于子尧/sequence/: 商品管理模块时序图.vsdx  团购管理模块时序图.vsdx  就业信息管理模块时序图.vsdx  数据分析模块时序图.vsdx  用户管理模块时序图.vsdx  订单管理模块时序图.vsdx
data/张三/er/: 学生.vsdx  老师.vsdx
data/特色分类管理/sequence/: 特色分类管理时序图.vsdx
input/于子尧/: 于子尧.docx
src/visio_agent/: __init__.py  agent.py  diagram_engine.py  diagram_runner.py  paper_input.py  parser.py  prompt.py  skill_loader.py  visio_controller.py
src/visio_agent/diagrams/: login_sequence.vsdx  order_flowchart.vsdx  student_er.vsdx
src/visio_agent/skills/: __init__.py
src/visio_agent/skills/diagram_protocol/: SKILL.md  stub_tools.py  validate_tool.py
src/visio_agent/skills/er/: ER模板.vsdx  SKILL.md  tools.py
src/visio_agent/skills/er/template/: ER_even.vsdx  ER_odd.vsdx
src/visio_agent/skills/flowchart/: SKILL.md  spec.py  tools.py
src/visio_agent/skills/flowchart/template/: template_1.vsdx  template_2.vsdx
src/visio_agent/skills/sequence/: SKILL.md  slots.py  tools.py
src/visio_agent/skills/sequence/template/: double_way.vsdx  one_way.vsdx
tmp/: 特色分类管理时序图.vsdx
张三/: 学生.vsdx
提示词/: 单个ER图.md  流程图.md
